include/fitpack_grid_polar_c.h

/**
 * @brief new_points
 * @param u 
 * @param v 
 * @param r 
 * @param z column-major (Fortran order) buffer of z_n1 x z_n2 elements; z_n1 is the leading (first) extent
 * @param z0 
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_new_points(fitpack_grid_polar_c* self, int32_t n, const double* u, const double* v, double r, int32_t z_n1, int32_t z_n2, const double* z, double* z0);
/**
 * @brief new_fit
 * @param u 
 * @param v 
 * @param r 
 * @param z column-major (Fortran order) buffer of z_n1 x z_n2 elements; z_n1 is the leading (first) extent
 * @param z0 
 * @param smoothing 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_grid_polar_c_new_fit(const fitpack_grid_polar_c* self, int32_t n, const double* u, const double* v, double r, int32_t z_n1, int32_t z_n2, const double* z, double* z0, double* smoothing);
/**
 * @brief gridded_eval_many
 * @param u 
 * @param v 
 * @param ierr 
 * @note result: caller-allocated buffer of max_size elements; n_result receives the actual count (= product of (SIZE(v), SIZE(u)))
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_gridded_eval_many(fitpack_grid_polar_c* self, int32_t n, const double* u, const double* v, int32_t* ierr, double* result, int32_t* n_result, int32_t max_size);
/**
 * @brief comm_pack
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_comm_pack(fitpack_grid_polar_c* self, int32_t n, double* buffer);
/**
 * @brief comm_expand
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_comm_expand(fitpack_grid_polar_c* self, int32_t n, const double* buffer);
/**
 * @brief core_comm_pack
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_core_comm_pack(fitpack_grid_polar_c* self, int32_t n, double* buffer);
/**
 * @brief core_comm_expand
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_core_comm_expand(fitpack_grid_polar_c* self, int32_t n, const double* buffer);
/* ===========================================================================================
 * Component Array Accessors (raw pointer + extents)
 * =========================================================================================== */

/**
 * @brief Borrow the storage of allocatable array component 'u'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 1 extent(s); all zero when the
 *                component is unallocated.
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_getcomp_u(const fitpack_grid_polar_c* self, double** ptr, int64_t extents[1]);
/**
 * @brief Borrow the storage of allocatable array component 'v'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 1 extent(s); all zero when the
 *                component is unallocated.
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_getcomp_v(const fitpack_grid_polar_c* self, double** ptr, int64_t extents[1]);
/**
 * @brief Borrow the storage of allocatable array component 'z'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 2 extent(s); all zero when the
 *                component is unallocated.
 *
 * @note The elements are laid out COLUMN-MAJOR (Fortran order): extents[0] is
 *       the leading (fastest-varying) extent, so element (i, j) — zero-based —
 *       lives at ptr[i + j * extents[0]].
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_getcomp_z(const fitpack_grid_polar_c* self, double** ptr, int64_t extents[2]);
/**
 * @brief Borrow the storage of allocatable array component 't'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 2 extent(s); all zero when the
 *                component is unallocated.
 *
 * @note The elements are laid out COLUMN-MAJOR (Fortran order): extents[0] is
 *       the leading (fastest-varying) extent, so element (i, j) — zero-based —
 *       lives at ptr[i + j * extents[0]].
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_getcomp_t(const fitpack_grid_polar_c* self, double** ptr, int64_t extents[2]);
/* ===========================================================================================
 * Scalar Property Accessors
 * =========================================================================================== */

FITPACK_CAPI_EXPORT double* fitpack_grid_polar_c_ref_r(const fitpack_grid_polar_c* self);
FITPACK_CAPI_EXPORT double* fitpack_grid_polar_c_ref_z0(const fitpack_grid_polar_c* self);
FITPACK_CAPI_EXPORT bool fitpack_grid_polar_c_get_z0_present(const fitpack_grid_polar_c* self);
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_set_z0_present(fitpack_grid_polar_c* self, bool z0_present);