src/capi/fitpack_gridded_polar_c.f90


    !> new_points
    subroutine fitpack_grid_polar_c_new_points(this, n, u, v, r, z_n1, z_n2, z, z0) bind(C, name='fitpack_grid_polar_c_new_points')
        type(fitpack_grid_polar_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n, z_n1, z_n2
        real(c_double), intent(in) :: u(n)
        real(c_double), intent(in) :: v(n)
        real(c_double), intent(in), value :: r
        real(c_double), intent(in) :: z(z_n1, z_n2)
        real(c_double), intent(in), optional :: z0
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%new_points(u, v, r, z, z0)
        end if
    end subroutine fitpack_grid_polar_c_new_points

    !> new_fit
    integer(c_int32_t) function fitpack_grid_polar_c_new_fit(this, n, u, v, r, z_n1, z_n2, z, z0, smoothing) bind(C,  &
        & name='fitpack_grid_polar_c_new_fit')
        type(fitpack_grid_polar_c), intent(in) :: this
        integer(c_int32_t), intent(in), value :: n, z_n1, z_n2
        real(c_double), intent(in) :: u(n)
        real(c_double), intent(in) :: v(n)
        real(c_double), intent(in), value :: r
        real(c_double), intent(in) :: z(z_n1, z_n2)
        real(c_double), intent(in), optional :: z0, smoothing
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_new_fit = fthis%new_fit(u, v, r, z, z0, smoothing)
        else
            fitpack_grid_polar_c_new_fit = 0
        end if
    end function fitpack_grid_polar_c_new_fit

    !> gridded_eval_many
    subroutine fitpack_grid_polar_c_gridded_eval_many(this, n, u, v, ierr, result, n_result, max_size) bind(C,  &
        & name='fitpack_grid_polar_c_gridded_eval_many')
        type(fitpack_grid_polar_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: u(n)
        real(c_double), intent(in) :: v(n)
        integer(c_int32_t), intent(out), optional :: ierr
        real(c_double), intent(inout) :: result(*)
        integer(c_int32_t), intent(out) :: n_result
        integer(c_int32_t), intent(in), value :: max_size
        real(c_double), allocatable :: fresult(:,:)
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fresult = fthis%eval(u=u, v=v, ierr=ierr)
            n_result = size(fresult)
            result(1:min(n_result, max_size)) = reshape(fresult, [min(n_result, max_size)])
        end if
    end subroutine fitpack_grid_polar_c_gridded_eval_many

    !> comm_pack
    subroutine fitpack_grid_polar_c_comm_pack(this, n, buffer) bind(C, name='fitpack_grid_polar_c_comm_pack')
        type(fitpack_grid_polar_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(inout) :: buffer(n)
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%comm_pack(buffer)
        end if
    end subroutine fitpack_grid_polar_c_comm_pack

    !> comm_expand
    subroutine fitpack_grid_polar_c_comm_expand(this, n, buffer) bind(C, name='fitpack_grid_polar_c_comm_expand')
        type(fitpack_grid_polar_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: buffer(n)
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%comm_expand(buffer)
        end if
    end subroutine fitpack_grid_polar_c_comm_expand

    !> core_comm_pack
    subroutine fitpack_grid_polar_c_core_comm_pack(this, n, buffer) bind(C, name='fitpack_grid_polar_c_core_comm_pack')
        type(fitpack_grid_polar_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(inout) :: buffer(n)
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%core_comm_pack(buffer)
        end if
    end subroutine fitpack_grid_polar_c_core_comm_pack

    !> core_comm_expand
    subroutine fitpack_grid_polar_c_core_comm_expand(this, n, buffer) bind(C, name='fitpack_grid_polar_c_core_comm_expand')
        type(fitpack_grid_polar_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: buffer(n)
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%core_comm_expand(buffer)
        end if
    end subroutine fitpack_grid_polar_c_core_comm_expand

    ! ===========================================================================================
    ! SECTION 8: Component Array Accessors (raw pointer + extents)
    ! ===========================================================================================

    !> Raw view of component 'u': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_grid_polar_c_getcomp_u(this, ptr, extents) &
        bind(C, name='fitpack_grid_polar_c_getcomp_u')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_grid_polar), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%u)) then
                extents = int(shape(fthis%u), kind=c_int64_t)
                if (size(fthis%u) > 0) ptr = c_loc(fthis%u)
            end if
        end if
    end subroutine fitpack_grid_polar_c_getcomp_u

    !> Raw view of component 'v': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_grid_polar_c_getcomp_v(this, ptr, extents) &
        bind(C, name='fitpack_grid_polar_c_getcomp_v')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_grid_polar), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%v)) then
                extents = int(shape(fthis%v), kind=c_int64_t)
                if (size(fthis%v) > 0) ptr = c_loc(fthis%v)
            end if
        end if
    end subroutine fitpack_grid_polar_c_getcomp_v

    !> Raw view of component 'z': address of the first element, plus
    !> the component's 2 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_grid_polar_c_getcomp_z(this, ptr, extents) &
        bind(C, name='fitpack_grid_polar_c_getcomp_z')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(2)
        type(fitpack_grid_polar), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%z)) then
                extents = int(shape(fthis%z), kind=c_int64_t)
                if (size(fthis%z) > 0) ptr = c_loc(fthis%z)
            end if
        end if
    end subroutine fitpack_grid_polar_c_getcomp_z

    !> Raw view of component 't': address of the first element, plus
    !> the component's 2 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_grid_polar_c_getcomp_t(this, ptr, extents) &
        bind(C, name='fitpack_grid_polar_c_getcomp_t')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(2)
        type(fitpack_grid_polar), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%t)) then
                extents = int(shape(fthis%t), kind=c_int64_t)
                if (size(fthis%t) > 0) ptr = c_loc(fthis%t)
            end if
        end if
    end subroutine fitpack_grid_polar_c_getcomp_t

    ! ===========================================================================================
    ! SECTION 9: Scalar Property Accessors
    ! ===========================================================================================

    !> Get pointer to scalar property 'r'
    type(c_ptr) function fitpack_grid_polar_c_ref_r(this) &
        bind(C, name='fitpack_grid_polar_c_ref_r')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(fitpack_grid_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_ref_r = c_loc(fthis%r)
        else
            fitpack_grid_polar_c_ref_r = c_null_ptr
        end if
    end function fitpack_grid_polar_c_ref_r

    !> Get pointer to scalar property 'z0'
    type(c_ptr) function fitpack_grid_polar_c_ref_z0(this) &
        bind(C, name='fitpack_grid_polar_c_ref_z0')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(fitpack_grid_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_ref_z0 = c_loc(fthis%z0)
        else
            fitpack_grid_polar_c_ref_z0 = c_null_ptr
        end if
    end function fitpack_grid_polar_c_ref_z0

    !> Get logical property 'z0_present'
    logical(c_bool) function fitpack_grid_polar_c_get_z0_present(this) &
        bind(C, name='fitpack_grid_polar_c_get_z0_present')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(fitpack_grid_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_get_z0_present = logical(fthis%z0_present, c_bool)
        else
            fitpack_grid_polar_c_get_z0_present = .false._c_bool
        end if
    end function fitpack_grid_polar_c_get_z0_present

    !> Set logical property 'z0_present'
    subroutine fitpack_grid_polar_c_set_z0_present(this, value) &
        bind(C, name='fitpack_grid_polar_c_set_z0_present')
        type(fitpack_grid_polar_c), intent(inout) :: this
        logical(c_bool), intent(in), value :: value
        type(fitpack_grid_polar), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fthis%z0_present = logical(value)
        end if
    end subroutine fitpack_grid_polar_c_set_z0_present
